--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 $day: "mon", "tue", "wed", "thu", "fri", "sat", "sun";
 
-html {
+html, body {
   height: 100%;
 }
 
@@ -8,34 +8,31 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
   margin: 0;
 }
 
-div.calendar {
+.calendar {
   display: grid;
   grid-gap: 1px 1px;
   grid-template-columns: repeat(7, 100px);
   grid-template-rows: repeat(5, 100px); 
 }
 
-div.calendar div {
+.calendar div {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100px;
   height: 100px;
   box-sizing: border-box;
-}
-
-.calendar div:hover {
-  transform: scale(1.2, 1.2);
-  transition: background-color 0.5s, transform 0.5s;
-}
-
-:before {
-  font-family: "Arial", sans-serif;
-  font-size: 30px;
+  &:hover {
+    transform: scale(1.2, 1.2);
+    transition: .5s background-color, .5s transform;
+  }
+  &:before {
+    font-family: "Arial", sans-serif;
+    font-size: 30px;
+  }
 }
 
 @for $j from 1 through length($day) {
@@ -47,16 +44,16 @@ div.calendar div {
         @for $i from 1 through $days {
           :nth-child(#{$i}) {
             background: #eeeeee;
-            border: 1px solid black;            
+            border: 1px solid black;
+            &:hover {
+              background-color: pink;
+              cursor: pointer;
+            }
+            &:before {
+              content: $i + "";
+            }       
           }
-          :nth-child(#{$i}):hover {
-            background-color: pink;
-            cursor: pointer;
-          }
-          :nth-child(#{$i}):before {
-            content: $i + "";
         }
       }
     }
   }
-}
