--- a/style.scss
+++ b/style.scss
@@ -22,12 +22,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
   box-sizing: border-box;
   &:hover {
-    transform: scale(1.2, 1.2);
-    transition: .5s background-color, .5s transform;
+    transform: translateY(-10px);
+    transition: .5s;
   }
   &:before {
     font-family: "Arial", sans-serif;
@@ -36,24 +34,28 @@ body {
 }
 
 @for $j from 1 through length($day) {
-    @for $days from 28 through 31 {
-      .calendar-#{nth($day, $j)}.calendar-#{$days} {
-        :first-child {
-          grid-column-start: index($day, nth($day, $j));
+  .calendar-#{nth($day, $j)} {
+    :first-child {
+      grid-column-start: index($day, nth($day, $j));
+    }
+  }
+}
+
+@for $days from 28 through 31 {
+  .calendar-#{$days} {
+    @for $i from 1 through $days {
+      :nth-child(#{$i}) {
+        background: #eeeeee;
+        border: 1px solid black;
+        &:hover {
+          background-color: pink;
+          cursor: pointer;
         }
-        @for $i from 1 through $days {
-          :nth-child(#{$i}) {
-            background: #eeeeee;
-            border: 1px solid black;
-            &:hover {
-              background-color: pink;
-              cursor: pointer;
-            }
-            &:before {
-              content: $i + "";
-            }       
-          }
-        }
+        &:before {
+        content: $i + "";
+        } 
       }
     }
   }
+}
+  
